begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
package|;
end_package

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|assertEquals
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|assertNotNull
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|assertTrue
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Collection
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|EnumSet
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Map
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|TreeMap
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|concurrent
operator|.
name|TimeUnit
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|stream
operator|.
name|Collectors
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|ClusterMetrics
operator|.
name|Option
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|Admin
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|RegionInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|Table
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|testclassification
operator|.
name|MediumTests
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|testclassification
operator|.
name|MiscTests
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|util
operator|.
name|Bytes
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|AfterClass
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|BeforeClass
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|ClassRule
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|experimental
operator|.
name|categories
operator|.
name|Category
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|Logger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|LoggerFactory
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hbase
operator|.
name|thirdparty
operator|.
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|collect
operator|.
name|Lists
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hbase
operator|.
name|thirdparty
operator|.
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|collect
operator|.
name|Maps
import|;
end_import

begin_class
annotation|@
name|Category
argument_list|(
block|{
name|MiscTests
operator|.
name|class
block|,
name|MediumTests
operator|.
name|class
block|}
argument_list|)
specifier|public
class|class
name|TestRegionLoad
block|{
annotation|@
name|ClassRule
specifier|public
specifier|static
specifier|final
name|HBaseClassTestRule
name|CLASS_RULE
init|=
name|HBaseClassTestRule
operator|.
name|forClass
argument_list|(
name|TestRegionLoad
operator|.
name|class
argument_list|)
decl_stmt|;
specifier|private
specifier|static
specifier|final
name|Logger
name|LOG
init|=
name|LoggerFactory
operator|.
name|getLogger
argument_list|(
name|TestRegionLoad
operator|.
name|class
argument_list|)
decl_stmt|;
specifier|private
specifier|static
specifier|final
name|HBaseTestingUtility
name|UTIL
init|=
operator|new
name|HBaseTestingUtility
argument_list|()
decl_stmt|;
specifier|private
specifier|static
name|Admin
name|admin
decl_stmt|;
specifier|private
specifier|static
specifier|final
name|TableName
name|TABLE_1
init|=
name|TableName
operator|.
name|valueOf
argument_list|(
literal|"table_1"
argument_list|)
decl_stmt|;
specifier|private
specifier|static
specifier|final
name|TableName
name|TABLE_2
init|=
name|TableName
operator|.
name|valueOf
argument_list|(
literal|"table_2"
argument_list|)
decl_stmt|;
specifier|private
specifier|static
specifier|final
name|TableName
name|TABLE_3
init|=
name|TableName
operator|.
name|valueOf
argument_list|(
literal|"table_3"
argument_list|)
decl_stmt|;
specifier|private
specifier|static
specifier|final
name|TableName
index|[]
name|tables
init|=
operator|new
name|TableName
index|[]
block|{
name|TABLE_1
block|,
name|TABLE_2
block|,
name|TABLE_3
block|}
decl_stmt|;
specifier|private
specifier|static
specifier|final
name|int
name|MSG_INTERVAL
init|=
literal|500
decl_stmt|;
comment|// ms
annotation|@
name|BeforeClass
specifier|public
specifier|static
name|void
name|beforeClass
parameter_list|()
throws|throws
name|Exception
block|{
comment|// Make servers report eagerly. This test is about looking at the cluster status reported.
comment|// Make it so we don't have to wait around too long to see change.
name|UTIL
operator|.
name|getConfiguration
argument_list|()
operator|.
name|setInt
argument_list|(
literal|"hbase.regionserver.msginterval"
argument_list|,
name|MSG_INTERVAL
argument_list|)
expr_stmt|;
name|UTIL
operator|.
name|startMiniCluster
argument_list|(
literal|4
argument_list|)
expr_stmt|;
name|admin
operator|=
name|UTIL
operator|.
name|getAdmin
argument_list|()
expr_stmt|;
name|admin
operator|.
name|balancerSwitch
argument_list|(
literal|false
argument_list|,
literal|true
argument_list|)
expr_stmt|;
name|createTables
argument_list|()
expr_stmt|;
block|}
annotation|@
name|AfterClass
specifier|public
specifier|static
name|void
name|afterClass
parameter_list|()
throws|throws
name|Exception
block|{
name|UTIL
operator|.
name|shutdownMiniCluster
argument_list|()
expr_stmt|;
block|}
specifier|private
specifier|static
name|void
name|createTables
parameter_list|()
throws|throws
name|IOException
throws|,
name|InterruptedException
block|{
name|byte
index|[]
index|[]
name|FAMILIES
init|=
operator|new
name|byte
index|[]
index|[]
block|{
name|Bytes
operator|.
name|toBytes
argument_list|(
literal|"f"
argument_list|)
block|}
decl_stmt|;
for|for
control|(
name|TableName
name|tableName
range|:
name|tables
control|)
block|{
name|Table
name|table
init|=
name|UTIL
operator|.
name|createTable
argument_list|(
name|tableName
argument_list|,
name|FAMILIES
argument_list|,
name|HBaseTestingUtility
operator|.
name|KEYS_FOR_HBA_CREATE_TABLE
argument_list|)
decl_stmt|;
name|UTIL
operator|.
name|waitTableAvailable
argument_list|(
name|tableName
argument_list|)
expr_stmt|;
name|UTIL
operator|.
name|loadTable
argument_list|(
name|table
argument_list|,
name|FAMILIES
index|[
literal|0
index|]
argument_list|)
expr_stmt|;
block|}
block|}
annotation|@
name|Test
specifier|public
name|void
name|testRegionLoad
parameter_list|()
throws|throws
name|Exception
block|{
comment|// Check if regions match with the regionLoad from the server
for|for
control|(
name|ServerName
name|serverName
range|:
name|admin
operator|.
name|getClusterMetrics
argument_list|(
name|EnumSet
operator|.
name|of
argument_list|(
name|Option
operator|.
name|LIVE_SERVERS
argument_list|)
argument_list|)
operator|.
name|getLiveServerMetrics
argument_list|()
operator|.
name|keySet
argument_list|()
control|)
block|{
name|List
argument_list|<
name|RegionInfo
argument_list|>
name|regions
init|=
name|admin
operator|.
name|getRegions
argument_list|(
name|serverName
argument_list|)
decl_stmt|;
name|LOG
operator|.
name|info
argument_list|(
literal|"serverName="
operator|+
name|serverName
operator|+
literal|", regions="
operator|+
name|regions
operator|.
name|stream
argument_list|()
operator|.
name|map
argument_list|(
name|r
lambda|->
name|r
operator|.
name|getRegionNameAsString
argument_list|()
argument_list|)
operator|.
name|collect
argument_list|(
name|Collectors
operator|.
name|toList
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
name|Collection
argument_list|<
name|RegionLoad
argument_list|>
name|regionLoads
init|=
name|admin
operator|.
name|getRegionMetrics
argument_list|(
name|serverName
argument_list|)
operator|.
name|stream
argument_list|()
operator|.
name|map
argument_list|(
name|r
lambda|->
operator|new
name|RegionLoad
argument_list|(
name|r
argument_list|)
argument_list|)
operator|.
name|collect
argument_list|(
name|Collectors
operator|.
name|toList
argument_list|()
argument_list|)
decl_stmt|;
name|LOG
operator|.
name|info
argument_list|(
literal|"serverName="
operator|+
name|serverName
operator|+
literal|", regionLoads="
operator|+
name|regionLoads
operator|.
name|stream
argument_list|()
operator|.
name|map
argument_list|(
name|r
lambda|->
name|Bytes
operator|.
name|toString
argument_list|(
name|r
operator|.
name|getRegionName
argument_list|()
argument_list|)
argument_list|)
operator|.
name|collect
argument_list|(
name|Collectors
operator|.
name|toList
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
name|checkRegionsAndRegionLoads
argument_list|(
name|regions
argument_list|,
name|regionLoads
argument_list|)
expr_stmt|;
block|}
comment|// Check if regionLoad matches the table's regions and nothing is missed
for|for
control|(
name|TableName
name|table
range|:
operator|new
name|TableName
index|[]
block|{
name|TABLE_1
block|,
name|TABLE_2
block|,
name|TABLE_3
block|}
control|)
block|{
name|List
argument_list|<
name|RegionInfo
argument_list|>
name|tableRegions
init|=
name|admin
operator|.
name|getRegions
argument_list|(
name|table
argument_list|)
decl_stmt|;
name|List
argument_list|<
name|RegionLoad
argument_list|>
name|regionLoads
init|=
name|Lists
operator|.
name|newArrayList
argument_list|()
decl_stmt|;
for|for
control|(
name|ServerName
name|serverName
range|:
name|admin
operator|.
name|getClusterMetrics
argument_list|(
name|EnumSet
operator|.
name|of
argument_list|(
name|Option
operator|.
name|LIVE_SERVERS
argument_list|)
argument_list|)
operator|.
name|getLiveServerMetrics
argument_list|()
operator|.
name|keySet
argument_list|()
control|)
block|{
name|regionLoads
operator|.
name|addAll
argument_list|(
name|admin
operator|.
name|getRegionMetrics
argument_list|(
name|serverName
argument_list|,
name|table
argument_list|)
operator|.
name|stream
argument_list|()
operator|.
name|map
argument_list|(
name|r
lambda|->
operator|new
name|RegionLoad
argument_list|(
name|r
argument_list|)
argument_list|)
operator|.
name|collect
argument_list|(
name|Collectors
operator|.
name|toList
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
block|}
name|checkRegionsAndRegionLoads
argument_list|(
name|tableRegions
argument_list|,
name|regionLoads
argument_list|)
expr_stmt|;
block|}
comment|// Just wait here. If this fixes the test, come back and do a better job.
comment|// Would have to redo the below so can wait on cluster status changing.
comment|// Admin#getClusterMetrics retrieves data from HMaster. Admin#getRegionMetrics, by contrast,
comment|// get the data from RS. Hence, it will fail if we do the assert check before RS has done
comment|// the report.
name|TimeUnit
operator|.
name|MILLISECONDS
operator|.
name|sleep
argument_list|(
literal|3
operator|*
name|MSG_INTERVAL
argument_list|)
expr_stmt|;
comment|// Check RegionLoad matches the regionLoad from ClusterStatus
name|ClusterStatus
name|clusterStatus
init|=
operator|new
name|ClusterStatus
argument_list|(
name|admin
operator|.
name|getClusterMetrics
argument_list|(
name|EnumSet
operator|.
name|of
argument_list|(
name|Option
operator|.
name|LIVE_SERVERS
argument_list|)
argument_list|)
argument_list|)
decl_stmt|;
for|for
control|(
name|ServerName
name|serverName
range|:
name|clusterStatus
operator|.
name|getServers
argument_list|()
control|)
block|{
name|ServerLoad
name|serverLoad
init|=
name|clusterStatus
operator|.
name|getLoad
argument_list|(
name|serverName
argument_list|)
decl_stmt|;
name|Map
argument_list|<
name|byte
index|[]
argument_list|,
name|RegionLoad
argument_list|>
name|regionLoads
init|=
name|admin
operator|.
name|getRegionMetrics
argument_list|(
name|serverName
argument_list|)
operator|.
name|stream
argument_list|()
operator|.
name|collect
argument_list|(
name|Collectors
operator|.
name|toMap
argument_list|(
name|e
lambda|->
name|e
operator|.
name|getRegionName
argument_list|()
argument_list|,
name|e
lambda|->
operator|new
name|RegionLoad
argument_list|(
name|e
argument_list|)
argument_list|,
parameter_list|(
name|v1
parameter_list|,
name|v2
parameter_list|)
lambda|->
block|{
throw|throw
argument_list|new
name|RuntimeException
argument_list|(
literal|"impossible!!"
argument_list|)
argument_list|;
block|}
operator|,
parameter_list|()
lambda|->
operator|new
name|TreeMap
argument_list|<>
argument_list|(
name|Bytes
operator|.
name|BYTES_COMPARATOR
argument_list|)
block|)
block|)
class|;
end_class

begin_expr_stmt
name|LOG
operator|.
name|debug
argument_list|(
literal|"serverName="
operator|+
name|serverName
operator|+
literal|", getRegionLoads="
operator|+
name|serverLoad
operator|.
name|getRegionsLoad
argument_list|()
operator|.
name|keySet
argument_list|()
operator|.
name|stream
argument_list|()
operator|.
name|map
argument_list|(
name|r
lambda|->
name|Bytes
operator|.
name|toString
argument_list|(
name|r
argument_list|)
argument_list|)
operator|.
name|collect
argument_list|(
name|Collectors
operator|.
name|toList
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
end_expr_stmt

begin_expr_stmt
name|LOG
operator|.
name|debug
argument_list|(
literal|"serverName="
operator|+
name|serverName
operator|+
literal|", regionLoads="
operator|+
name|regionLoads
operator|.
name|keySet
argument_list|()
operator|.
name|stream
argument_list|()
operator|.
name|map
argument_list|(
name|r
lambda|->
name|Bytes
operator|.
name|toString
argument_list|(
name|r
argument_list|)
argument_list|)
operator|.
name|collect
argument_list|(
name|Collectors
operator|.
name|toList
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
end_expr_stmt

begin_expr_stmt
name|compareRegionLoads
argument_list|(
name|serverLoad
operator|.
name|getRegionsLoad
argument_list|()
argument_list|,
name|regionLoads
argument_list|)
expr_stmt|;
end_expr_stmt

begin_function
unit|}   }
specifier|private
name|void
name|compareRegionLoads
parameter_list|(
name|Map
argument_list|<
name|byte
index|[]
argument_list|,
name|RegionLoad
argument_list|>
name|regionLoadCluster
parameter_list|,
name|Map
argument_list|<
name|byte
index|[]
argument_list|,
name|RegionLoad
argument_list|>
name|regionLoads
parameter_list|)
block|{
name|assertEquals
argument_list|(
literal|"No of regionLoads from clusterStatus and regionloads from RS doesn't match"
argument_list|,
name|regionLoadCluster
operator|.
name|size
argument_list|()
argument_list|,
name|regionLoads
operator|.
name|size
argument_list|()
argument_list|)
expr_stmt|;
comment|// The contents of region load from cluster and server should match
for|for
control|(
name|byte
index|[]
name|regionName
range|:
name|regionLoadCluster
operator|.
name|keySet
argument_list|()
control|)
block|{
name|regionLoads
operator|.
name|remove
argument_list|(
name|regionName
argument_list|)
expr_stmt|;
block|}
name|assertEquals
argument_list|(
literal|"regionLoads from SN should be empty"
argument_list|,
literal|0
argument_list|,
name|regionLoads
operator|.
name|size
argument_list|()
argument_list|)
expr_stmt|;
block|}
end_function

begin_function
specifier|private
name|void
name|checkRegionsAndRegionLoads
parameter_list|(
name|Collection
argument_list|<
name|RegionInfo
argument_list|>
name|regions
parameter_list|,
name|Collection
argument_list|<
name|RegionLoad
argument_list|>
name|regionLoads
parameter_list|)
block|{
for|for
control|(
name|RegionLoad
name|load
range|:
name|regionLoads
control|)
block|{
name|assertNotNull
argument_list|(
name|load
operator|.
name|regionLoadPB
argument_list|)
expr_stmt|;
block|}
name|assertEquals
argument_list|(
literal|"No of regions and regionloads doesn't match"
argument_list|,
name|regions
operator|.
name|size
argument_list|()
argument_list|,
name|regionLoads
operator|.
name|size
argument_list|()
argument_list|)
expr_stmt|;
name|Map
argument_list|<
name|byte
index|[]
argument_list|,
name|RegionLoad
argument_list|>
name|regionLoadMap
init|=
name|Maps
operator|.
name|newTreeMap
argument_list|(
name|Bytes
operator|.
name|BYTES_COMPARATOR
argument_list|)
decl_stmt|;
for|for
control|(
name|RegionLoad
name|regionLoad
range|:
name|regionLoads
control|)
block|{
name|regionLoadMap
operator|.
name|put
argument_list|(
name|regionLoad
operator|.
name|getName
argument_list|()
argument_list|,
name|regionLoad
argument_list|)
expr_stmt|;
block|}
for|for
control|(
name|RegionInfo
name|info
range|:
name|regions
control|)
block|{
name|assertTrue
argument_list|(
literal|"Region not in regionLoadMap region:"
operator|+
name|info
operator|.
name|getRegionNameAsString
argument_list|()
operator|+
literal|" regionMap: "
operator|+
name|regionLoadMap
argument_list|,
name|regionLoadMap
operator|.
name|containsKey
argument_list|(
name|info
operator|.
name|getRegionName
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
block|}
block|}
end_function

unit|}
end_unit

